--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_contacts: ^1.1.9+2
   get: ^4.7.2
+  flutter_callkit_voximplant: ^2.1.0
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
